Added the Services and Single Portfolio Page

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 <!-- responsive -->
 <link rel="stylesheet" type="text/css" href="css/responsive.css"/>
 
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+
     
 
 </head>
@@ -825,7 +828,7 @@
                                             <div class="testimonial-content"><!-- testimonials-content -->
                                                 <div class="testimonial-avatar">
                                                     <div class="testimonial-img"><!-- testimonials-img -->
-                                                        <img class="img-center lazyload" data-src="images/testimonial/04.jpg" alt="testimonial-img">
+                                                        <img class="img-center lazyload" data-src="images/testimonial/01.jpg" alt="testimonial-img">
                                                     </div>
                                                 </div>
                                                 <blockquote>5 star work, fast and great value. I will re-hire Adnan.</blockquote>
@@ -848,7 +851,7 @@
                                             <div class="testimonial-content"><!-- testimonials-content -->
                                                 <div class="testimonial-avatar">
                                                     <div class="testimonial-img"><!-- testimonials-img -->
-                                                        <img class="img-center lazyload" data-src="images/testimonial/05.jpg" alt="testimonial-img">
+                                                        <img class="img-center lazyload" data-src="images/testimonial/02.jpg" alt="testimonial-img">
                                                     </div>
                                                 </div>
                                                 <blockquote>Job completed successfully for both change of UI design and adding new modules.</blockquote>
@@ -871,7 +874,7 @@
                                             <div class="testimonial-content"><!-- testimonials-content -->
                                                 <div class="testimonial-avatar">
                                                     <div class="testimonial-img"><!-- testimonials-img -->
-                                                        <img class="img-center lazyload" data-src="images/testimonial/06.jpg" alt="testimonial-img">
+                                                        <img class="img-center lazyload" data-src="images/testimonial/03.jpg" alt="testimonial-img">
                                                     </div>
                                                 </div>
                                                 <blockquote>VirtueNetz is very professional team and an expert at web design. I highly recommend them!</blockquote>
